--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.469.0",
     "next": "^15.1.4",
     "next-themes": "^0.4.4",
+    "ogl": "^1.0.10",
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
     "react-dom": "^18.2.0",
