--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "drizzle-zod": "^0.6.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
+    "motion": "^11.17.0",
     "next": "^15.1.4",
     "next-themes": "^0.4.4",
     "ogl": "^1.0.10",
