--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-table": "^8.20.6",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "@uiw/react-codemirror": "^4.23.7",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.9",
@@ -37,16 +39,20 @@
     "drizzle-orm": "^0.38.3",
     "drizzle-zod": "^0.6.1",
     "geist": "^1.3.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
+    "matter-js": "^0.20.0",
     "next": "^15.1.4",
     "next-themes": "^0.4.4",
     "ogl": "^1.0.10",
+    "poly-decomp": "^0.3.0",
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "sonner": "^1.7.1",
+    "svg-path-commander": "^2.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.4",
@@ -55,9 +61,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/animejs": "^3.1.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "animejs": "^3.2.2",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.1",
     "eslint": "^9",
