--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.2",
-    "@heroui/skeleton": "^2.2.5",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -33,26 +32,20 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
-    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.3",
+    "drizzle-zod": "^0.6.1",
     "geist": "^1.3.1",
-    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.4",
+    "next": "15.1.2",
     "next-themes": "^0.4.4",
-    "ogl": "^1.0.10",
-    "poly-decomp": "^0.3.0",
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
-    "sonner": "^1.7.1",
-    "svg-path-commander": "^2.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.4",
-    "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
